--- a/Alcohol_Consumption.ipynb
+++ b/Alcohol_Consumption.ipynb
@@ -16,6 +16,7 @@
    "outputs": [],
    "source": [
     "data_one = pd.read_csv(\"student-mat.csv\")\n",
+    "data_one[\"subject\"] = \"math\"\n",
     "data_two = pd.read_csv(\"student-por.csv\")\n",
     "data = pd.concat([data_one, data_two])"
    ]
