added import statements

--- a/Alcohol_Consumption.ipynb
+++ b/Alcohol_Consumption.ipynb
@@ -14,7 +14,17 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import sklearn\n",
+    "from sklearn import datasets\n",
+    "from sklearn import linear_model\n",
+    "import seaborn as sns\n",
+    "from numpy.polynomial.polynomial import polyfit\n",
+    "import statsmodels.api as sm\n",
+    "import statsmodels.formula.api as smf"
    ]
   },
   {
@@ -305,6 +315,35 @@
     "* by gender\n",
     "* by ses\n",
     "* by sp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-1-e1941d42e060>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-e1941d42e060>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    * by age\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "# # Alcohol use Ben\n",
+    "# * by age\n",
+    "# * by gender\n",
+    "# * by ses\n",
+    "# * by sp\n",
+    "# * by grades\n",
+    "\n",
+    "\n",
+    "# ## Grades Ben\n",
+    "# * by gender\n",
+    "# * by ses\n",
+    "# * by sp"
    ]
   },
   {
