--- a/Alcohol_Consumption.ipynb
+++ b/Alcohol_Consumption.ipynb
@@ -282,6 +282,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['schoolsup'] = data['schoolsup'].replace('yes', 1).replace('no', 0)\n",
+    "data['famsup'] = data['famsup'].replace('yes', 1).replace('no', 0)\n",
+    "data['paid'] = data['paid'].replace('yes', 1).replace('no', 0)\n",
+    "data['activities'] = data['activities'].replace('yes', 1).replace('no', 0)\n",
+    "data['nursery'] = data['nursery'].replace('yes', 1).replace('no', 0)\n",
+    "data['higher'] = data['higher'].replace('yes', 1).replace('no', 0)\n",
+    "data['internet'] = data['internet'].replace('yes', 1).replace('no', 0)\n",
+    "data['romantic'] = data['romantic'].replace('yes', 1).replace('no', 0)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -299,11 +315,6 @@
     "* nursery\n",
     "* paid\n",
     "\n",
-    "## Social participation Shevi\n",
-    "* romantic\n",
-    "* activities\n",
-    "* goout\n",
-    "\n",
     "## Alcohol use Ben\n",
     "* by age\n",
     "* by gender\n",
@@ -315,6 +326,30 @@
     "* by gender\n",
     "* by ses\n",
     "* by sp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Social participation Shevi\n",
+    "* romantic\n",
+    "* activities\n",
+    "* goout"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplot(1,2)\n",
+    "sns.countplot(x='romantic', data=data)\n",
+    "sns.countplot(x='activities', data=data)\n",
+    "#sns.countplot(x='social_activity', data=data)"
    ]
   },
   {
