--- a/Alcohol_Consumption.ipynb
+++ b/Alcohol_Consumption.ipynb
@@ -1865,14 +1865,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A good residuals graphs are residuals that hover equally above and below 0. Following the trend I showed using the cross validation scores, it seems that generally the models do a good job of predicting grades in the class. Linear regression is the best. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "When comparing differnt regressors we see that generally the decision tree and linear regression is better at predicting than the k-nearest neighbors. However, "
+    "A good residuals graphs are residuals that hover equally above and below 0. Following the trend I showed using the cross validation scores, it seems that generally the models do a good job of predicting grades in the class. Linear regression is the best.When comparing differnt regressors we see that generally the decision tree and linear regression is better at predicting than the k-nearest neighbors. "
    ]
   },
   {
